# nativa-base-repository

./: .env  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: .env.example  ARCHITECTURE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: base.py
backend/app/domains/clients/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/contacts/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/payments/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/infrastructure/stripe/: client.py  exceptions.py  webhooks.py
backend/app/shared/: base_repository.py  enums.py
backend/tests/: conftest.py
backend/tests/unit/domains/: test_clients.py  test_contacts.py  test_payments.py
frontend/: ARCHITECTURE.md  Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/components/forms/: TextField.tsx
frontend/src/components/layout/: app-sidebar.tsx
frontend/src/hooks/: useDebounce.ts  useLocalStorage.ts
frontend/src/lib/api/: client.ts
frontend/src/store/: index.ts
frontend/src/types/: api.ts  common.ts
postgres/: init.sql
(+1 files in other folders)
